[package]
name = "horloge"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg_test = []

[dependencies]
heapless = "0.7"
once_cell = "1.17"
pgrx     = "=0.7.4"

[dependencies.chrono]
version  = "0.4"
features = ["clock"]

[dependencies.tokio]
version  = "1.27"
features = ["rt", "time", "macros", "parking_lot"]

[dev-dependencies]
pgrx-tests = "=0.7.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
